external-crates/move/crates/move-compiler/tests/move_check/expansion/restricted_alias_names.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_alias_names.move:9:16
  │
9 │         foo as address,
  │                ^^^^^^^ Invalid function alias name 'address'. 'address' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:10:16
   │
10 │         foo as signer,
   │                ^^^^^^ Invalid function alias name 'signer'. 'signer' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:11:16
   │
11 │         foo as u8,
   │                ^^ Invalid function alias name 'u8'. 'u8' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:12:16
   │
12 │         foo as u64,
   │                ^^^ Invalid function alias name 'u64'. 'u64' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:13:16
   │
13 │         foo as u128,
   │                ^^^^ Invalid function alias name 'u128'. 'u128' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:14:16
   │
14 │         foo as vector,
   │                ^^^^^^ Invalid function alias name 'vector'. 'vector' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:15:16
   │
15 │         foo as freeze,
   │                ^^^^^^ Invalid function alias name 'freeze'. 'freeze' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:16:16
   │
16 │         foo as assert,
   │                ^^^^^^ Invalid function alias name 'assert'. 'assert' is restricted and cannot be used to name a function alias

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_alias_names.move:17:16
   │
17 │         foo as Self,
   │                ^^^^ Invalid function alias name 'Self'. 'Self' is restricted and cannot be used to name a function alias
